packages/docs/content/docs/v7/usage/guide/utilities.mdx
---
title: 工具集
description: amagi 提供的各平台工具函数
icon: Wrench
---

# 工具集

amagi 为各平台提供了丰富的工具函数，包括签名算法、URL 拼接器、格式转换等。

## 平台工具集

<Tabs items={['B站', '抖音', '快手', '小红书']}>
  <Tab value="B站">
```ts twoslash
import { bilibiliUtils } from '@ikenxuan/amagi'

// AV/BV 转换
const bv = bilibiliUtils.sign.av2bv(170001)
const av = bilibiliUtils.sign.bv2av('BV17x411w7KC')
```

### 签名算法

```ts twoslash
import { bilibiliUtils } from '@ikenxuan/amagi'
// ---cut---
// WBI 签名
const signedUrl = await bilibiliUtils.sign.wbi_sign(
  'https://api.bilibili.com/x/web-interface/view?bvid=BV1xx',
  'your_cookie'
)
```

### 弹幕解析

```ts twoslash
import { bilibiliUtils } from '@ikenxuan/amagi'

// `buffer` 是 `/x/v2/dm/web/seg.so` 的响应体（protobuf 二进制）
declare const buffer: Uint8Array
// ---cut---
// 解析 protobuf 格式的弹幕数据
const danmakuList = bilibiliUtils.danmaku.parseDmSegMobileReply(buffer)
```

  </Tab>
  <Tab value="抖音">
```ts twoslash
import { douyinUtils } from '@ikenxuan/amagi'

// 生成 msToken
const msToken = douyinUtils.sign.Mstoken(128)
```

### 签名算法

```ts twoslash
import { douyinUtils } from '@ikenxuan/amagi'

// 待签名的完整 URL（含 query），以及可选的 UA —— 不传时用内置的 Chrome 125 UA
declare const url: string
declare const userAgent: string
// ---cut---
// 生成 a_bogus 签名
const aBogus = douyinUtils.sign.AB(url, userAgent)

// 生成 X-Bogus 签名
const xBogus = douyinUtils.sign.XB(url, userAgent)

// 验证指纹管理器
const verifyFp = douyinUtils.sign.VerifyFpManager()
```

  </Tab>
  <Tab value="快手">
```ts twoslash
// v6 的 URL 构造器不在 utils 上 —— 从包顶层直接拿
import { kuaishouApiUrls } from '@ikenxuan/amagi'

// 获取结构化请求描述对象
const request = kuaishouApiUrls.videoWork({
  photoId: '3xqxxxxxx'
})
```

### 签名算法

```ts twoslash
import { kuaishouApiUrls, kuaishouUtils } from '@ikenxuan/amagi'

const request = kuaishouApiUrls.userInfoById({
  principalId: 'KPL704668133'
})

const signed = kuaishouUtils.sign.signLiveApiRequest(
  request,
  'kwfv1=your_cookie_value'
)
```

  </Tab>
  <Tab value="小红书">
```ts twoslash
import { xiaohongshuUtils } from '@ikenxuan/amagi'

// 生成 X-T 时间戳
const xt = xiaohongshuUtils.sign.generateXT()

// 生成 X-B3-Traceid
const traceid = xiaohongshuUtils.sign.generateXB3Traceid()

// 从 Cookie 中提取 a1
const a1 = xiaohongshuUtils.sign.extractA1FromCookie('a1=xxx; webId=yyy')

// 生成搜索 ID
const searchId = xiaohongshuUtils.sign.getSearchId()
```

### X-S 签名

```ts twoslash
import { xiaohongshuUtils } from '@ikenxuan/amagi'

// 接口路径（不含域名）、cookie 里的 a1 值、完整 cookie 串
declare const path: string
declare const a1Cookie: string
declare const cookies: string
// ---cut---
// 生成 X-S 签名 (GET 请求)：clientType 与 params 都可省略
const xsGet = xiaohongshuUtils.sign.generateXSGet(path, a1Cookie, 'xhs-pc-web', { num: 30 })

// 生成 X-S 签名 (POST 请求)：第四个参数是请求体
const xsPost = xiaohongshuUtils.sign.generateXSPost(path, a1Cookie, 'xhs-pc-web', { note_id: '64xxxxxxxx' })

// 生成 X-S-Common：入参是**完整 cookie 串**，不是长度
const xsCommon = xiaohongshuUtils.sign.generateXSCommon(cookies)
```

  </Tab>
</Tabs>
